--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <h3>Contact for web designing.</h3>
       <p>For more design and development stick to our website.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto: azaansaikh9@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
