--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kaif Ahmad- web developer and cybersecurity expert</title>
+  <title>Kaif Ahmad- front-end web developer and Advance networking & cybersecurity student</title>
 </head>
 <link rel="stylesheet" href="css/styles.css">
 <link rel="icon" href="favicon.ico">
