--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img class="cloud1" src="cloud.png" alt="cloud">
 
     <h1>I'm Kaif Ahmad</h1>
-    <h2 class="cse"><span>Cyber</span>security expert</h2>
+    <h2 class="cse"><span>Cyber</span>security student</h2>
     <img class="moon" src="crescent-moon.png" alt="moon-img">
     <img class="cloud2" src="cloud.png" alt="cloud">
     <img src="mountain.png" alt="mountain">
@@ -30,7 +30,7 @@
     <div class="profile">
       <img src="kaif.png" alt="Kaif-img">
       <h2>Hello.</h2>
-      <p class="intro">I am Microsoft Office Specialist in Excel. I am also a cybersecurity expert and pentester💻.</p>
+      <p class="intro">I am an Ethical Hacker (certified). I am also cybersecurity student and pentester💻.</p>
     </div>
 
     <hr>
@@ -39,7 +39,7 @@
       <div class="skill-row">
         <img class="skill" src="pencil (2).png" alt="skill-img">
         <h3>design and tally</h3>
-        <p>I am now a intermediate full-stack web developer and I am currently pursuing BSc(H) in Advance Networking and Cybersecurity.</p>
+        <p>I am now a intermediate full-stack web developer and I am currently pursuing BSc(H) in Advance Networking and Cybersecurity and also I am an ethical hacker (certified).</p>
       </div>
       <div class="skill-row">
         <img class="skill2" src="controller.png" alt="skill2-img">
