--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skill" src="pencil (2).png" alt="skill-img">
-        <h3>design and tally</h3>
+        <h3>Hacking and Security</h3>
         <p>I am now a intermediate full-stack web developer and I am currently pursuing BSc(H) in Advance Networking and Cybersecurity and also I am an ethical hacker (certified).</p>
       </div>
       <div class="skill-row">
