--- a/index.html
+++ b/index.html
@@ -3,70 +3,65 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kaif Ahmad- web developer and cybersecurity expert</title>
+  <title>Kaif Ahmad - Web Developer & Cybersecurity Expert</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400&display=swap" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="css/styles.css">
-<link rel="icon" href="favicon.ico">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
 <body>
   <div class="top-container">
-
     <img class="cloud1" src="cloud.png" alt="cloud">
-
     <h1>I'm Kaif Ahmad</h1>
-    <h2 class="cse"><span>Cyber</span>security student</h2>
+    <h2 class="cse"><span>Cyber</span>security Specialist</h2>
     <img class="moon" src="crescent-moon.png" alt="moon-img">
     <img class="cloud2" src="cloud.png" alt="cloud">
-    <img src="mountain.png" alt="mountain">
+    <img class="mountain" src="mountain.png" alt="mountain">
   </div>
+
   <div class="middle-container">
     <img class="fly" src="firefly.png" alt="firefly-img">
     <div class="profile">
       <img src="kaif.png" alt="Kaif-img">
-      <h2>Hello.</h2>
-      <p class="intro">I am an Ethical Hacker (certified). I am also cybersecurity student and pentester💻.</p>
+      <h2>Welcome</h2>
+      <p class="intro">I am an Ethical Hacker, certified and skilled in penetration testing. I'm passionate about cybersecurity and committed to advancing in the field.</p>
     </div>
 
     <hr>
-   
-      <h2>My Skills.</h2>
+
+    <div class="skills">
+      <h2>Skills</h2>
       <div class="skill-row">
-        <img class="skill" src="pencil (2).png" alt="skill-img">
-        <h3>Hacking and Security</h3>
-        <p>I am now a intermediate full-stack web developer and I am currently pursuing BSc(H) in Advance Networking and Cybersecurity and also I am an ethical hacker (certified).</p>
+        <img class="skill" src="security.png" alt="Hacking and Security">
+        <h3>Hacking & Security</h3>
+        <p>Proficient in ethical hacking, penetration testing, and securing networks. Currently pursuing a degree in Advanced Networking and Cybersecurity.</p>
       </div>
       <div class="skill-row">
-        <img class="skill2" src="controller.png" alt="skill2-img">
-        <h3>Casual Gamer</h3>
-        <p>I also like gaming but for fun purpose only. I am not a competitive gamer</p>
+        <img class="skill" src="gaming.png" alt="Gaming">
+        <h3>Casual Gaming</h3>
+        <p>I enjoy gaming for relaxation. It's a fun way to unwind, but I'm not in it for competition.</p>
       </div>
     </div>
+
     <hr>
 
     <div class="contact-me">
       <h2>Get In Touch</h2>
-   
-
-      <h3>Contact for web designing.</h3>
-      <p>For more design and development stick to our website.</p>
-      <a class="btn" href="mailto: azaansaikh9@gmail.com">CONTACT ME</a>
+      <h3>Need Web Design?</h3>
+      <p>If you're looking for sleek and secure web designs, let's connect.</p>
+      <a class="btn" href="mailto:azaansaikh9@gmail.com">CONTACT ME</a>
     </div>
   </div>
-
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="copyright">© Kaif Ahmad.</p>
+    <p class="copyright">© Kaif Ahmad</p>
   </div>
-
 </body>
 
 </html>
